--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,22 @@ nav ul li a{
     font-size: 1.5em; 
     font-family: 'Pacifico', cursive;
 }
+@media only screen and (max-width: 599px){
+    nav ul li a{
+        list-style: none;
+        text-decoration: none;
+        color: #6BB329;
+        font-size: 0.75em; 
+        font-family: 'Pacifico', cursive;
+    }
+    .propiedades article img {
+        display: flex;
+        justify-content: center;
+        width: 30vh;
+        height: 30vh;
+    }
+    #mapa-contacto{
+        height: 60vh;
+    }
+
+}
